<resources>
    <string name="app_name">Shop Desk</string>
    <string name="total_cost_format">Total Cost: %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rs_70">Rs.70</string>
    <string name="classmate_notebook">Classmate notebook</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="geometry_box">Geometry Box</string>
    <string name="rs_200">Rs_200</string>
    <string name="pay">Pay</string>

    <string name="textview">TextView</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="proceed_to_pay">Proceed to Pay</string>

    <string name="hello">Hello</string>
    <string name="item_name">Item Name</string>
    <string name="cost">Cost</string>
    <string name="quantity">Quantity</string>
    <string name="no">no</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment">Payment</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="actvity">Actvity</string>
    <string name="item_name_Cart">Item Name</string>
    <string name="number_cart">Number</string>
    <string name="cost_cart">Cost</string>
    <string name="quantity_cart">Quantity</string>
    <string name="plus_cart">+</string>
    <string name="delete_cart">Delete</string>
    <string name="minus_cart">-</string>
    <string name="delete_item">Delete Item</string>
    <string name="are_you_sure_you_want_to_delete_this_item_from_the_cart">Are you sure you want to delete this item from the cart?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="cart">Cart</string>
    <string name="tid">TID</string>
    <string name="date">Date</string>
    <string name="time_gmt">Time (GMT)</string>
    <string name="items_list">Items List</string>
    <string name="payment_status">Payment Status</string>
    <string name="collection_status">Collection Status</string>
    <string name="activity">Activity</string>
    <string name="name">Name</string>
    <string name="contact_us">Contact Us</string>
    <string name="address">Address</string>
    <string name="_99_2_bull_temple_road_basvangudi_inside_b_m_s_college_of_engineering_bangalore_19">99/2, Bull Temple Road, Basvangudi, inside B.M.S College of Engineering bangalore-19</string>
    <string name="phone">Phone</string>
    <string name="_9911223344">9911223344</string>
    <string name="total_cost">Total Cost</string>
</resources>